@@ -117,7 +117,7 @@ COMMASPACE = ', '
 DOT = '.'
 
 # Locking contantsa
-LOCKFILE = os.path.join(mm_cfg.LOCK_DIR, 'master-qrunner')
+LOCKFILE = os.path.join(mm_cfg.LOCK_DIR, mm_cfg.MASTER_LOCK_FILE)
 # Since we wake up once per day and refresh the lock, the LOCK_LIFETIME
 # needn't be (much) longer than SNOOZE.  We pad it 6 hours just to be safe.
 LOCK_LIFETIME = mm_cfg.days(1) + mm_cfg.hours(6)
